--- a/style.css
+++ b/style.css
@@ -58,6 +58,10 @@ body{
     font-size:16px;
     font-weight:bold;
 }
+.chartTitle{
+    padding-left:10px;
+    font-size:30px;
+}
 .col-sm-4{
     border:1px solid black;
 }
